--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@
 
 # quarkus.rabbitmq.devservices.port=5672
 
-
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = elizaveta
 quarkus.datasource.password = admin202
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/mydb
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+# quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
